# BSTU-Navigation-Service

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs  mongo_client.rs  server.rs  zipper.rs
