[package]
name = "actix_navigation_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.3.1"
actix-service = "2.0.2"
actix-web = "4.3.1"
dotenv = "0.15.0"
futures = "0.3.27"
mongodb = {version = "*", default-features = false, features = ["tokio-runtime", "tokio-sync"]}
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serial_test = "1.0.0"
tokio = "1.26.0"
url = "2.3.1"
urlencoding = "*"
